--- a/nomination_predication.ipynb
+++ b/nomination_predication.ipynb
@@ -67,15 +67,15 @@
    "outputs": [],
    "source": [
     "# load text data\n",
-    "with open('Texte/Test_Text_I.txt', 'r') as f:\n",
+    "with open('text/Test_Text_I.txt', 'r') as f:\n",
     "    text_one = f.read()    \n",
-    "with open('Texte/Test_Text_II.txt', 'r') as f:\n",
+    "with open('text/Test_Text_II.txt', 'r') as f:\n",
     "    text_two = f.read()    \n",
-    "with open('Texte/Test_Text_III.txt', 'r') as f:\n",
+    "with open('text/Test_Text_III.txt', 'r') as f:\n",
     "    text_three = f.read()\n",
-    "with open('Texte/Hillary_Clinton.txt', 'r') as f:\n",
+    "with open('text/Hillary_Clinton.txt', 'r') as f:\n",
     "    hillary = f.read()\n",
-    "with open('Texte/Bill_Clinton.txt', 'r') as f:\n",
+    "with open('text/Bill_Clinton.txt', 'r') as f:\n",
     "    bill = f.read()\n",
     "\n",
     "# convert to SpaCy format\n",
